--- a/package.json
+++ b/package.json
@@ -9,15 +9,61 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^7.2.0",
+    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/native-stack": "^7.2.0",
+    "@react-navigation/stack": "^7.1.1",
+    "@rn-primitives/accordion": "^1.1.0",
+    "@rn-primitives/alert-dialog": "^1.1.0",
+    "@rn-primitives/aspect-ratio": "^1.1.0",
+    "@rn-primitives/avatar": "^1.1.0",
+    "@rn-primitives/checkbox": "^1.1.0",
+    "@rn-primitives/collapsible": "^1.1.0",
+    "@rn-primitives/context-menu": "^1.1.0",
+    "@rn-primitives/dialog": "^1.1.0",
+    "@rn-primitives/dropdown-menu": "^1.1.0",
+    "@rn-primitives/hover-card": "^1.1.0",
+    "@rn-primitives/label": "^1.1.0",
+    "@rn-primitives/menubar": "^1.1.0",
+    "@rn-primitives/navigation-menu": "^1.1.0",
+    "@rn-primitives/popover": "^1.1.0",
+    "@rn-primitives/progress": "^1.1.0",
+    "@rn-primitives/radio-group": "^1.1.0",
+    "@rn-primitives/select": "^1.1.0",
+    "@rn-primitives/separator": "^1.1.0",
+    "@rn-primitives/slot": "^1.1.0",
+    "@rn-primitives/switch": "^1.1.0",
+    "@rn-primitives/table": "^1.1.0",
+    "@rn-primitives/tabs": "^1.1.0",
+    "@rn-primitives/toggle": "^1.1.0",
+    "@rn-primitives/toggle-group": "^1.1.0",
+    "@rn-primitives/tooltip": "^1.1.0",
+    "@rn-primitives/types": "^1.1.0",
+    "@shopify/flash-list": "^1.7.3",
+    "@tanstack/react-query": "^5.66.0",
+    "babel-plugin-module-resolver": "^5.0.2",
     "expo": "~52.0.33",
     "expo-status-bar": "~2.0.1",
+    "nativewind": "^4.1.23",
     "react": "18.3.1",
-    "react-native": "0.76.7"
+    "react-native": "0.76.7",
+    "react-native-date-picker": "^5.0.10",
+    "react-native-gesture-handler": "^2.23.1",
+    "react-native-modal": "^13.0.1",
+    "react-native-reanimated": "^3.16.2",
+    "react-native-safe-area-context": "^5.2.0",
+    "react-native-svg": "^15.11.1",
+    "react-native-vector-icons": "^10.2.0",
+    "tailwind-rn": "^4.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@biomejs/biome": "1.9.4",
     "@types/react": "~18.3.12",
+    "postcss": "^8.5.2",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.3.3"
   },
-  "private": true
+  "private": true,
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
