--- a/package.json
+++ b/package.json
@@ -42,10 +42,15 @@
     "@shopify/flash-list": "^1.7.3",
     "@tanstack/react-query": "^5.66.0",
     "babel-plugin-module-resolver": "^5.0.2",
+    "date-fns": "^4.1.0",
     "expo": "~52.0.33",
+    "expo-localization": "~16.0.1",
     "expo-status-bar": "~2.0.1",
+    "i18next": "^24.2.2",
+    "lodash": "^4.17.21",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
+    "react-i18next": "^15.4.0",
     "react-native": "0.76.7",
     "react-native-date-picker": "^5.0.10",
     "react-native-gesture-handler": "^2.23.1",
