--- a/package.json
+++ b/package.json
@@ -13,32 +13,6 @@
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
     "@react-navigation/stack": "^7.1.1",
-    "@rn-primitives/accordion": "^1.1.0",
-    "@rn-primitives/alert-dialog": "^1.1.0",
-    "@rn-primitives/aspect-ratio": "^1.1.0",
-    "@rn-primitives/avatar": "^1.1.0",
-    "@rn-primitives/checkbox": "^1.1.0",
-    "@rn-primitives/collapsible": "^1.1.0",
-    "@rn-primitives/context-menu": "^1.1.0",
-    "@rn-primitives/dialog": "^1.1.0",
-    "@rn-primitives/dropdown-menu": "^1.1.0",
-    "@rn-primitives/hover-card": "^1.1.0",
-    "@rn-primitives/label": "^1.1.0",
-    "@rn-primitives/menubar": "^1.1.0",
-    "@rn-primitives/navigation-menu": "^1.1.0",
-    "@rn-primitives/popover": "^1.1.0",
-    "@rn-primitives/progress": "^1.1.0",
-    "@rn-primitives/radio-group": "^1.1.0",
-    "@rn-primitives/select": "^1.1.0",
-    "@rn-primitives/separator": "^1.1.0",
-    "@rn-primitives/slot": "^1.1.0",
-    "@rn-primitives/switch": "^1.1.0",
-    "@rn-primitives/table": "^1.1.0",
-    "@rn-primitives/tabs": "^1.1.0",
-    "@rn-primitives/toggle": "^1.1.0",
-    "@rn-primitives/toggle-group": "^1.1.0",
-    "@rn-primitives/tooltip": "^1.1.0",
-    "@rn-primitives/types": "^1.1.0",
     "@shopify/flash-list": "^1.7.3",
     "@tanstack/react-query": "^5.66.0",
     "babel-plugin-module-resolver": "^5.0.2",
@@ -55,6 +29,7 @@
     "react-native-date-picker": "^5.0.10",
     "react-native-gesture-handler": "^2.23.1",
     "react-native-modal": "^13.0.1",
+    "react-native-rapi-ui": "^0.2.1",
     "react-native-reanimated": "^3.16.2",
     "react-native-safe-area-context": "^5.2.0",
     "react-native-svg": "^15.11.1",
